--- a/index.ipynb
+++ b/index.ipynb
@@ -76,7 +76,7 @@
     "        self.image = \"./quinoa_seeds.jpg\"\n",
     "        self.debug = \"plot\"\n",
     "        self.writeimg = False\n",
-    "        self.result = \"seed_analysis_results\"\n",
+    "        self.result = \"seed_analysis_results.json\"\n",
     "        self.outdir = \".\""
    ]
   },
@@ -819,8 +819,8 @@
    "source": [
     "# Inputs:\n",
     "#   filename  = filename for saving results\n",
-    "#   outformat = output file format: \"json\" (default) hierarchical format or \"csv\" tabular format\n",
-    "pcv.outputs.save_results(filename=args.result, outformat=\"csv\")"
+    "#   outformat = output file format: \"json\" (default) hierarchical format or \"json\" tabular format\n",
+    "pcv.outputs.save_results(filename=args.result, outformat=\"json\")"
    ]
   },
   {
