update img path, and minor markdown edits

--- a/index.ipynb
+++ b/index.ipynb
@@ -83,7 +83,7 @@
     "# once cell is run in jupyter notebooks (recommended)\n",
     "\n",
     "args = WorkflowInputs(\n",
-    "    images=[\"./imgs/quinoa_seeds.jpg\"],\n",
+    "    images=[\"./img/quinoa_seeds.jpg\"],\n",
     "    names=\"image1\",\n",
     "    result=\"quinoa_seed_analysis_results.csv\",\n",
     "    outdir=\".\",\n",
@@ -160,6 +160,7 @@
    "outputs": [],
    "source": [
     "# Inputs:\n",
+    "#   img = input image to get cropped\n",
     "#   x = top left x-coordinate\n",
     "#   y = top left y-coordinate\n",
     "#   h = height of final cropped image\n",
@@ -336,7 +337,7 @@
     "#Labeled mask is the mask which labels each individual seed to allow it to be measured.\n",
     "\n",
     "        #Inputs:\n",
-    "        #Mask = mask created earlier in workflow\n",
+    "        #   Mask = mask created earlier in workflow\n",
     "\n",
     "labeled_mask, num = pcv.create_labels(mask=b_fill)"
    ]
@@ -360,12 +361,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "        # Analyze shape and size perameters of each seed\n",
-    "        #\n",
+    "# Analyze shape and size perameters of each seed\n",
+    "\n",
     "        # Inputs:\n",
     "        #   img = rgb image\n",
-    "        #   mask = mask which has labeled each individual seed in image\n",
-    "        #   label = how many labels based on number of seeds in image. Num->all seeds in image\n",
+    "        #   labeled_mask = Labeled mask of objects (32-bit).\n",
+    "        #   n_labels = Total number expected individual objects (default = 1).\n",
+    "        #   label = Optional label parameter, modifies the variable name of\n",
+    "        #           observations recorded (default = pcv.params.sample_label)\n",
     "shape_img = pcv.analyze.size(img=crop_img, labeled_mask=labeled_mask, n_labels=num, label=\"quinoa\")"
    ]
   },
@@ -376,13 +379,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "        # Analyze color of each seed\n",
-    "        #\n",
+    "# Analyze color of each seed\n",
+    "        \n",
     "        # Inputs:\n",
     "        #   img = rgb image\n",
-    "        #   labeled_mask = labeled mask\n",
+    "        #   labeled_mask = Labeled mask of objects (32-bit).\n",
     "        #   hist_plot_type = 'hsv', or None for no histogram plot\n",
-    "        #   n_labels = 'num' \n",
+    "        #   n_labels = Total number expected individual objects (default = 1).\n",
+    "        #   label = Optional label parameter, modifies the variable name of\n",
+    "        #           observations recorded (default = pcv.params.sample_label)\n",
     "analysis_image = pcv.analyze.color(rgb_img=crop_img, labeled_mask=labeled_mask, n_labels=num, colorspaces=\"hsv\", label=\"quinoa\")"
    ]
   },
@@ -431,7 +436,7 @@
     "\n",
     "This example includes image analysis for 'area', 'convex_hull_area', 'solidity', 'perimeter', 'width', 'height', 'longest_path', 'center_of_mass, 'convex_hull_vertices', 'object_in_frame', 'ellipse_center', 'ellipse_major_axis', 'ellipse_minor_axis', 'ellipse_angle', 'ellipse_eccentricity' using anayze_object and color analysis using analyze_color.\n",
     "\n",
-    "Here, results are saved to a CSV file for easy viewing, but when running workflows in parallel, save results as \"json\""
+    "Here, results are saved to JSON file, and this allows for database concatenation while running workflows in parallel."
    ]
   },
   {
@@ -472,7 +477,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.11.8"
   }
  },
  "nbformat": 4,
