--- a/index.ipynb
+++ b/index.ipynb
@@ -83,7 +83,7 @@
     "# once cell is run in jupyter notebooks (recommended)\n",
     "\n",
     "args = WorkflowInputs(\n",
-    "    images=[\"/img/quinoa_seeds.png\"],\n",
+    "    images=[\"./img/quinoa_seeds.png\"],\n",
     "    names=\"image1\",\n",
     "    result=\"quinoa_seed_analysis_results.csv\",\n",
     "    outdir=\".\",\n",
@@ -128,7 +128,7 @@
     "# Inputs:\n",
     "#   filename = Image file to be read in \n",
     "#   mode     = How to read in the image; either 'native' (default), 'rgb', 'gray', or 'csv'\n",
-    "img, path, filename = pcv.readimage(filename=\"./img/quinoa_seeds.png\")"
+    "img, path, filename = pcv.readimage(filename=\args.image1\)"
    ]
   },
   {
