--- a/index.ipynb
+++ b/index.ipynb
@@ -128,7 +128,7 @@
     "# Inputs:\n",
     "#   filename = Image file to be read in \n",
     "#   mode     = How to read in the image; either 'native' (default), 'rgb', 'gray', or 'csv'\n",
-    "img, path, filename = pcv.readimage(filename=\args.image1\)"
+    "img, path, filename = pcv.readimage(filename=args.image1)"
    ]
   },
   {
