absolute image path?

--- a/index.ipynb
+++ b/index.ipynb
@@ -94,7 +94,7 @@
     "# once cell is run in jupyter notebooks (recommended)\n",
     "\n",
     "args = WorkflowInputs(\n",
-    "    images=[\"../img/quinoa_seeds.jpg\"],\n",
+    "    images=[\"/plantcv-tutorial-seeds/img/quinoa_seeds.jpg\"],\n",
     "    names=\"image1\",\n",
     "    result=\"quinoa_seed_analysis_results.csv\",\n",
     "    outdir=\".\",\n",
