include .. in path, back to cwd within tests

--- a/index.ipynb
+++ b/index.ipynb
@@ -131,14 +131,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 27,
    "id": "88c3dc7f",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7cbb228b359c49c0bb58cdcabd547650",
+       "model_id": "754ad4b585de4218af66ccd077c5b5dc",
        "version_major": 2,
        "version_minor": 0
       },
@@ -165,7 +165,8 @@
     "# Inputs:\n",
     "#   filename = Image file to be read in \n",
     "#   mode     = How to read in the image; either 'native' (default), 'rgb', 'gray', or 'csv'\n",
-    "img, path, filename = pcv.readimage(filename=args.image1)"
+    "\n",
+    "img, path, filename = pcv.readimage(filename=\"../img/quinoa_seeds.jpg\")"
    ]
   },
   {
