check for "runner" in cwd to indicate CI testing

--- a/index.ipynb
+++ b/index.ipynb
@@ -72,23 +72,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "780ef3fd-2568-4595-a9e0-ba3ad97db86a",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/Users/hschuhl/Documents/GitHub/plantcv-tutorial-seeds\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "# Code for Continuous Integration, change current working directory \n",
     "cwd = os.getcwd()\n",
-    "if \"tests\" in cwd:\n",
-    "    os.chdir(\"..\")\n",
-    "    print(\"testing\")"
+    "if \"runner\" in cwd:\n",
+    "    os.chdir(\"..\")\n"
    ]
   },
   {
