--- a/index-Colab.ipynb
+++ b/index-Colab.ipynb
@@ -13,6 +13,29 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "42347c4d-b66b-4688-92fe-c5555278b638",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Install PlantCV and required dependencies\n",
+    "%pip install \"altair>=5\" ipympl plantcv\n",
+    "\n",
+    "# Give access and mount your Google Drive (need a Google Account)\n",
+    "# Change path to directory you wish output files to be saved to.\n",
+    "from google.colab import drive\n",
+    "drive.mount('/content/gdrive')\n",
+    "\n",
+    "# Enable widget feature with matplotlib\n",
+    "from google.colab import output\n",
+    "output.enable_custom_widget_manager()\n",
+    "\n",
+    "#View working directory, may need to change path\n",
+    "%pwd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "acc77c46",
    "metadata": {},
    "outputs": [],
@@ -24,7 +47,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d92acc9f-ce2d-4688-8e16-3d29567f303e",
+   "id": "70ce0cc5-45ef-42b5-88d9-a60b0ceac221",
    "metadata": {
     "id": "604065b5"
    },
@@ -35,11 +58,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "65e727bd",
-   "metadata": {},
+   "id": "407d1b1b-bd6b-4eb1-9cf0-391d6bb08014",
+   "metadata": {
+    "id": "62ef791b"
+   },
    "outputs": [],
    "source": [
-    "#Import libraries\n",
+    "# Import libraries\n",
     "from plantcv import plantcv as pcv\n",
     "from plantcv.parallel import WorkflowInputs\n",
     "\n",
@@ -49,22 +74,12 @@
   },
   {
    "cell_type": "markdown",
-   "id": "09e446b2-77dd-4c6e-b393-d8f81aac8f60",
+   "id": "5658ed82-eaed-4d0e-a3f6-f8f793d9b36b",
    "metadata": {
     "id": "4468af74"
    },
    "source": [
-    "## Input/Ouput variables\n",
-    "\n",
-    "Using this while developing a workflow in Jupyter makes it easier to convert the workflow to a script later."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "2de8ecff",
-   "metadata": {},
-   "source": [
-    "## Input variables\n",
+    "## Input/Output variables\n",
     "\n",
     "The options class mimics the workflow command-line argument parser that is used for workflow parallelization. Using it while developing a workflow in Jupyter makes it easier to convert the workflow to a script later."
    ]
@@ -80,10 +95,10 @@
     "args = WorkflowInputs(\n",
     "    images=[\"./img/quinoa_seeds.jpg\"],\n",
     "    names=\"image1\",\n",
-    "    result=\"quinoa_seed_analysis_results.json\",\n",
+    "    result=\"quinoa_seed_analysis_results.csv\",\n",
     "    outdir=\".\",\n",
     "    writeimg=False,\n",
-    "    debug=\"plot\")\n"
+    "    debug=\"plot\")"
    ]
   },
   {
@@ -95,8 +110,10 @@
    "source": [
     "# Set debug to the global parameter\n",
     "pcv.params.debug = args.debug\n",
+    "\n",
     "# Set plotting size (default = 100)\n",
     "pcv.params.dpi = 100\n",
+    "\n",
     "# Increase text size and thickness to make labels clearer\n",
     "# (size may need to be altered based on original image size)\n",
     "pcv.params.text_size = 10\n",
@@ -112,8 +129,39 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
-   "id": "50716b7a-c65a-41f9-a178-f04a27d60c79",
+   "id": "2e07c8ff-43c7-4ba7-85f4-15dded53fc2d",
+   "metadata": {},
+   "source": [
+    "### Google Colaboratory users:\r\n",
+    "If you are running this notebook using Google Colaboratory, you will need to use the cell below to complete the tutorial unless you cloned the repository from GitHub to your personal Google Drive account. Once you begin developing your workflow for your data, you can delete this text cell and the code cell below so you avoid any conflicts the next time you use this notebook."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "29ee4522-01bd-4638-9239-f749cd9a9aad",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "img = pcv.io.open_url(url=\"https://raw.githubusercontent.com/danforthcenter/plantcv-tutorial-seeds/main/img/quinoa_seeds.jpg\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "582deff0-b177-4c11-a891-427ea604e003",
+   "metadata": {},
+   "source": [
+    "### Local system use:\n",
+    "If you have downloaded this notebook or the repository to your local device, then you will need to use the cell below to bring your image into the notebook. Do not run this line if you are navigating through the **tutorial** using Google Colaboratory.\n",
+    "\n",
+    "If you are developing your own workflow using this notebook, make sure you remove the code cell above with the URL and uncomment (remove the hashtag [#] to make the code active. This will call the image you defined during the Inputs/Outputs step."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1ed4561a-3095-4103-ae84-42675a67a828",
    "metadata": {
     "id": "Q4Na59TNNg1x"
    },
@@ -127,13 +175,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4318eaf1-29d4-4ad7-b609-2077f3fecf83",
+   "id": "83959434-b504-455c-9b83-1afd5e99adc0",
    "metadata": {
     "id": "03a085f7"
    },
    "outputs": [],
    "source": [
-    "img, path, filename = pcv.readimage(filename=args.image1)"
+    "# img, path, filename = pcv.readimage(filename=args.image1)"
    ]
   },
   {
@@ -217,7 +265,7 @@
     "#   channel - desired colorspace ('l', 'a', or 'b')\n",
     "b_img = pcv.rgb2gray_lab(rgb_img=crop_img, channel='b')\n",
     "\n",
-    "# Channel B is used because it provides the best separation of seeds from background."
+    "#Channel B is used because it provides the best separation of seeds from background."
    ]
   },
   {
