--- a/index.ipynb
+++ b/index.ipynb
@@ -38,12 +38,6 @@
    "outputs": [],
    "source": [
     "#Import libraries\n",
-    "\n",
-    "import os\n",
-    "import matplotlib\n",
-    "import cv2\n",
-    "import numpy as np\n",
-    "\n",
     "from plantcv import plantcv as pcv\n",
     "from plantcv.parallel import WorkflowInputs"
    ]
@@ -72,10 +66,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2de8ecff",
+   "id": "47bb71eb",
    "metadata": {},
    "source": [
-    "## Input variables\n",
+    "## Input/Output variables\n",
     "\n",
     "The options class mimics the workflow command-line argument parser that is used for workflow parallelization. Using it while developing a workflow in Jupyter makes it easier to convert the workflow to a script later."
    ]
@@ -138,7 +132,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "761153054583408e8f725184bdc67294",
+       "model_id": "8500a6aeb6e242c08e2a1ced3f2055cf",
        "version_major": 2,
        "version_minor": 0
       },
@@ -199,7 +193,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e9a5ed16959548f2994ead76dc804254",
+       "model_id": "1dc88e451c374a36bf72ce5d8ebc1a41",
        "version_major": 2,
        "version_minor": 0
       },
@@ -224,7 +218,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "639829a3bb494257855143cf1ba3376f",
+       "model_id": "43c416adb7e64770b7140a3f59c2119a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -270,7 +264,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2094bb1d4e254635a17d7301ce241c00",
+       "model_id": "cab3492759e045f8a85e39022234ed1d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -322,7 +316,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "34acaae38fc449af866b77fcf5fdaf26",
+       "model_id": "29732e100e7349a2b297a54e9f40af67",
        "version_major": 2,
        "version_minor": 0
       },
@@ -358,7 +352,7 @@
    "source": [
     "## Convert the color image to grayscale\n",
     "\n",
-    "Converts the input color image into the LAB colorspace and returns the B (blue-yellow) channel as a grayscale image."
+    "Converts the input color image into the LAB colorspace and returns the L (lightness) channel as a grayscale image."
    ]
   },
   {
@@ -370,7 +364,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fa26e563c2024304809fcfa70620a2cd",
+       "model_id": "227053bd581a48c2b8ebd3271cf532fc",
        "version_major": 2,
        "version_minor": 0
       },
@@ -411,7 +405,7 @@
     "\n",
     "A histogram can be used to visualize the distribution of values in an image. The histogram can aid in the selection of a threshold value.\n",
     "\n",
-    "For this image, the large peak between 125-130 are from the darker background pixels. The smaller peak between 150-160 are the lighter seed pixels."
+    "For this image, the large peak between 160-220 are from the brighter background pixels. The smaller peak between 60-120 are the darker seed pixels."
    ]
   },
   {
@@ -425,23 +419,23 @@
       "text/html": [
        "\n",
        "<style>\n",
-       "  #altair-viz-e316462645974cf094cc791cd88905a8.vega-embed {\n",
+       "  #altair-viz-685cf6f1210941b18108af42777dd9eb.vega-embed {\n",
        "    width: 100%;\n",
        "    display: flex;\n",
        "  }\n",
        "\n",
-       "  #altair-viz-e316462645974cf094cc791cd88905a8.vega-embed details,\n",
-       "  #altair-viz-e316462645974cf094cc791cd88905a8.vega-embed details summary {\n",
+       "  #altair-viz-685cf6f1210941b18108af42777dd9eb.vega-embed details,\n",
+       "  #altair-viz-685cf6f1210941b18108af42777dd9eb.vega-embed details summary {\n",
        "    position: relative;\n",
        "  }\n",
        "</style>\n",
-       "<div id=\"altair-viz-e316462645974cf094cc791cd88905a8\"></div>\n",
+       "<div id=\"altair-viz-685cf6f1210941b18108af42777dd9eb\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "  var VEGA_DEBUG = (typeof VEGA_DEBUG == \"undefined\") ? {} : VEGA_DEBUG;\n",
        "  (function(spec, embedOpt){\n",
        "    let outputDiv = document.currentScript.previousElementSibling;\n",
-       "    if (outputDiv.id !== \"altair-viz-e316462645974cf094cc791cd88905a8\") {\n",
-       "      outputDiv = document.getElementById(\"altair-viz-e316462645974cf094cc791cd88905a8\");\n",
+       "    if (outputDiv.id !== \"altair-viz-685cf6f1210941b18108af42777dd9eb\") {\n",
+       "      outputDiv = document.getElementById(\"altair-viz-685cf6f1210941b18108af42777dd9eb\");\n",
        "    }\n",
        "    const paths = {\n",
        "      \"vega\": \"https://cdn.jsdelivr.net/npm/vega@5?noext\",\n",
@@ -528,7 +522,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f9178282d63b41df94e9532efe7847c9",
+       "model_id": "cfc79400cabc4f7a85ec3c37e430c5bd",
        "version_major": 2,
        "version_minor": 0
       },
@@ -578,7 +572,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e0678ded00114b0087685836748510b2",
+       "model_id": "6f2acb96d0644da2b23bf76c48dba627",
        "version_major": 2,
        "version_minor": 0
       },
@@ -627,7 +621,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0e26bc95ae0a4bd1875d0e311c5ad347",
+       "model_id": "c5b7fc1473d4462b98aeff7ef03345df",
        "version_major": 2,
        "version_minor": 0
       },
@@ -698,7 +692,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b640ce5696cb4a09bc228478e641ac15",
+       "model_id": "8cf8346472e34f998effa111dcf29a0c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -759,7 +753,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "050601dad58e433e903dcec83f86e66c",
+       "model_id": "18b21644c6884322bab6de1f343ce54f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -805,23 +799,23 @@
       "text/html": [
        "\n",
        "<style>\n",
-       "  #altair-viz-ab4b1ec93d9345e499ab9f719c3da919.vega-embed {\n",
+       "  #altair-viz-33a95a4ac01e406d923c9c67872f3d98.vega-embed {\n",
        "    width: 100%;\n",
        "    display: flex;\n",
        "  }\n",
        "\n",
-       "  #altair-viz-ab4b1ec93d9345e499ab9f719c3da919.vega-embed details,\n",
-       "  #altair-viz-ab4b1ec93d9345e499ab9f719c3da919.vega-embed details summary {\n",
+       "  #altair-viz-33a95a4ac01e406d923c9c67872f3d98.vega-embed details,\n",
+       "  #altair-viz-33a95a4ac01e406d923c9c67872f3d98.vega-embed details summary {\n",
        "    position: relative;\n",
        "  }\n",
        "</style>\n",
-       "<div id=\"altair-viz-ab4b1ec93d9345e499ab9f719c3da919\"></div>\n",
+       "<div id=\"altair-viz-33a95a4ac01e406d923c9c67872f3d98\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "  var VEGA_DEBUG = (typeof VEGA_DEBUG == \"undefined\") ? {} : VEGA_DEBUG;\n",
        "  (function(spec, embedOpt){\n",
        "    let outputDiv = document.currentScript.previousElementSibling;\n",
-       "    if (outputDiv.id !== \"altair-viz-ab4b1ec93d9345e499ab9f719c3da919\") {\n",
-       "      outputDiv = document.getElementById(\"altair-viz-ab4b1ec93d9345e499ab9f719c3da919\");\n",
+       "    if (outputDiv.id !== \"altair-viz-33a95a4ac01e406d923c9c67872f3d98\") {\n",
+       "      outputDiv = document.getElementById(\"altair-viz-33a95a4ac01e406d923c9c67872f3d98\");\n",
        "    }\n",
        "    const paths = {\n",
        "      \"vega\": \"https://cdn.jsdelivr.net/npm/vega@5?noext\",\n",
