--- a/index-Colab.ipynb
+++ b/index-Colab.ipynb
@@ -2,10 +2,10 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "5f398b49",
+   "id": "f114133d",
    "metadata": {},
    "source": [
-    "# Quinoa Seed Analysis Tutorial\n",
+    "# Seed Analysis Tutorial\n",
     "\n",
     "This is a full workflow that shows methods for counting and analyzing the shape and color of seeds. Similar methods should work for other types of seeds."
    ]
@@ -87,15 +87,20 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f00798e6",
+   "id": "cfaf5b03",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Input/output options\n",
+    "# Input image into self.image (include file path if image is not in \n",
+    "# the same folder as jupyter notebook)\n",
+    "\n",
+    "# Set self.debug to \"plot\" so that image outputs for each step is shown\n",
+    "# once cell is run in jupyter notebooks (recommended)\n",
+    "\n",
     "args = WorkflowInputs(\n",
-    "    images=[\"./img/quinoa_seeds.jpg\"],\n",
+    "    images=[\"./img/beans_img.jpg\"],\n",
     "    names=\"image1\",\n",
-    "    result=\"quinoa_seed_analysis_results.csv\",\n",
+    "    result=\"seed_analysis_results.json\",\n",
     "    outdir=\".\",\n",
     "    writeimg=False,\n",
     "    debug=\"plot\")"
@@ -134,7 +139,7 @@
    "id": "2e07c8ff-43c7-4ba7-85f4-15dded53fc2d",
    "metadata": {},
    "source": [
-    "### Google Colaboratory users:\r\n",
+    "### Google Colaboratory users:\n",
     "If you are running this notebook using Google Colaboratory, you will need to use the cell below to complete the tutorial unless you cloned the repository from GitHub to your personal Google Drive account. Once you begin developing your workflow for your data, you can delete this text cell and the code cell below so you avoid any conflicts the next time you use this notebook."
    ]
   },
@@ -145,7 +150,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "img = pcv.io.open_url(url=\"https://raw.githubusercontent.com/danforthcenter/plantcv-tutorial-seeds/main/img/quinoa_seeds.jpg\")"
+    "img = pcv.io.open_url(url=\"https://raw.githubusercontent.com/danforthcenter/plantcv-tutorial-seeds/main/img/beans_img.jpg\")"
    ]
   },
   {
@@ -186,7 +191,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1f7af70a",
+   "id": "eff20a2f",
    "metadata": {},
    "source": [
     "# Section 2: Segmenting plant from background and identifying plant object(s)\n",
@@ -197,7 +202,27 @@
   },
   {
    "cell_type": "markdown",
-   "id": "baf530c4",
+   "id": "732c70a8",
+   "metadata": {},
+   "source": [
+    "## Color correction\n",
+    "\n",
+    "Corrects the color of the input image based on the target color matrix using an affine transformation in the RGB space after automatic detection of a color card within the image."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b8c5279e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "corrected_rgb = pcv.transform.auto_correct_color(rgb_img=img)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "786418c4",
    "metadata": {},
    "source": [
     "## Crop image\n",
@@ -208,21 +233,22 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c5907d84",
+   "id": "c4a243d0",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Inputs:\n",
+    "#   img = color corrected image to get cropped\n",
     "#   x = top left x-coordinate\n",
     "#   y = top left y-coordinate\n",
     "#   h = height of final cropped image\n",
     "#   w = width of final cropped image\n",
-    "crop_img = pcv.crop(img=img, x=1300, y=750, h=1750, w=2100)"
+    "crop_img = pcv.crop(img=corrected_rgb, x=250, y=1200, h=2600, w=2100)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "adjacent-agreement",
+   "id": "95a6e7d8",
    "metadata": {},
    "source": [
     "## Visualize colorspaces\n",
@@ -233,57 +259,56 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "returning-diabetes",
+   "id": "ba9e0966",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Inputs:\n",
-    "#   rbg_img      = original image\n",
-    "#   original_img = whether to include the original RGB images in the display: True (default) or False\n",
+    "#   rbg_img      = cropped image\n",
     "colorspace_img = pcv.visualize.colorspaces(rgb_img=crop_img)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "8a0b9cc5",
+   "id": "01a40bf6",
    "metadata": {},
    "source": [
     "## Convert the color image to grayscale\n",
     "\n",
-    "Converts the input color image into the LAB colorspace and returns the B (blue-yellow) channel as a grayscale image."
+    "Converts the input color image into the LAB colorspace and returns the L (lightness) channel as a grayscale image."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4436b613",
+   "id": "12cc6818",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Inputs:\n",
-    "#   rbg_img - original image\n",
+    "#   rbg_img - cropped image \n",
     "#   channel - desired colorspace ('l', 'a', or 'b')\n",
-    "b_img = pcv.rgb2gray_lab(rgb_img=crop_img, channel='b')\n",
+    "b_img = pcv.rgb2gray_lab(rgb_img=crop_img, channel='l')\n",
     "\n",
-    "#Channel B is used because it provides the best separation of seeds from background."
+    "#Channel L is used because it provides the best separation of seeds from background."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "affd8573",
+   "id": "dfbb44f9",
    "metadata": {},
    "source": [
     "## Visualize the distribution of grayscale values\n",
     "\n",
     "A histogram can be used to visualize the distribution of values in an image. The histogram can aid in the selection of a threshold value.\n",
     "\n",
-    "For this image, the large peak between 125-130 are from the darker background pixels. The smaller peak between 150-160 are the lighter seed pixels."
+    "For this image, the large peak between 160-220 are from the brighter background pixels. The smaller peak between 60-120 are the darker seed pixels."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1afdeffb",
+   "id": "ff980310",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -300,7 +325,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "831d7c01",
+   "id": "6ee922c6",
    "metadata": {},
    "source": [
     "## Threshold the grayscale image\n",
@@ -310,7 +335,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b3065640",
+   "id": "86f79405",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -318,12 +343,12 @@
     "#   gray_img    = black and white image created from selected colorspace\n",
     "#   threshold   = cutoff pixel intensity value (all pixels below value will become black, all above will become white)\n",
     "#   object_type = 'dark' or 'light' depending on if seeds are darker or lighter than background.\n",
-    "b_thresh = pcv.threshold.binary(gray_img=b_img, threshold=140, object_type='light') "
+    "b_thresh = pcv.threshold.binary(gray_img=b_img, threshold=120, object_type='dark') "
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "5530bcab",
+   "id": "a58de864",
    "metadata": {},
    "source": [
     "## Remove small background noise\n",
@@ -334,22 +359,42 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ae6b2810",
+   "id": "eb437dec",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Inputs:\n",
     "#   bin_img - binary mask image\n",
     "#   size - maximum size for objects that should be filled in as background (non-plant) pixels\n",
-    "b_fill = pcv.fill(bin_img=b_thresh, size=300)\n",
-    "#                                         /\\\n",
-    "#                                         |\n",
-    "#                                 change this value"
+    "b_fill_salt = pcv.fill(bin_img=b_thresh, size=500)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "c98e85e9",
+   "id": "7c4dcd4e",
+   "metadata": {},
+   "source": [
+    "## Fill holes within objects\n",
+    "\n",
+    "Thresholding labeled almost all plant pixels white but left some holes. This function cleans \"pepper\" noise (black holes) by doing a flood fill."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "35386393",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Inputs:\n",
+    "#   bin_img - binary mask image\n",
+    "b_fill = pcv.fill_holes(bin_img=b_fill_salt)\n",
+    "#                                         "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c8badcf2",
    "metadata": {},
    "source": [
     "# Section 3: Count and Analyze Seeds\n",
@@ -359,7 +404,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2ea12e9b",
+   "id": "40052242",
    "metadata": {},
    "source": [
     "## Count seeds\n",
@@ -369,7 +414,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "73576ccd",
+   "id": "643902c7",
    "metadata": {},
    "source": [
     "## Measure each seed\n",
@@ -382,14 +427,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e5558240",
+   "id": "defb6661",
    "metadata": {},
    "outputs": [],
    "source": [
     "#Labeled mask is the mask which labels each individual seed to allow it to be measured.\n",
     "\n",
     "        #Inputs:\n",
-    "        #Mask = mask created earlier in workflow\n",
+    "        #   Mask = mask created earlier in workflow\n",
     "\n",
     "labeled_mask, num = pcv.create_labels(mask=b_fill)"
    ]
@@ -397,7 +442,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ebd45e84-03b8-4d26-a96e-b0956030bc94",
+   "id": "2cb11ee2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -409,73 +454,43 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "31a01605-df58-4d55-abb8-1b12a61503bc",
+   "id": "79326f78",
    "metadata": {},
    "outputs": [],
    "source": [
-    "        # Analyze shape and size perameters of each seed\n",
-    "        #\n",
-    "        # Inputs:\n",
-    "        #   img = rgb image\n",
-    "        #   mask = mask which has labeled each individual seed in image\n",
-    "        #   label = how many labels based on number of seeds in image. Num->all seeds in image\n",
-    "shape_img = pcv.analyze.size(img=crop_img, labeled_mask=labeled_mask, n_labels=num, label=\"quinoa\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f2fe9854-0040-4a89-9aa4-0b9dc5d6bc41",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "        # Analyze color of each seed\n",
-    "        #\n",
-    "        # Inputs:\n",
-    "        #   img = rgb image\n",
-    "        #   labeled_mask = labeled mask\n",
-    "        #   hist_plot_type = 'hsv', or None for no histogram plot\n",
-    "        #   n_labels = 'num' \n",
-    "analysis_image = pcv.analyze.color(rgb_img=crop_img, labeled_mask=labeled_mask, n_labels=num, colorspaces=\"hsv\", label=\"quinoa\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "e2257018",
-   "metadata": {},
-   "source": [
-    "## Visualize shape analysis of seeds\n",
+    "# Analyze shape and size perameters of each seed\n",
     "\n",
-    "Since debugging was turned off during the for loop, as plotting all analysis results significantly slows down the analysis, we can plot the final shape and color analyses to ensure that the results look correct."
+    "        # Inputs:\n",
+    "        #   img = rgb image\n",
+    "        #   labeled_mask = Labeled mask of objects (32-bit).\n",
+    "        #   n_labels = Total number expected individual objects (default = 1).\n",
+    "        #   label = Optional label parameter, modifies the variable name of\n",
+    "        #           observations recorded (default = pcv.params.sample_label)\n",
+    "shape_img = pcv.analyze.size(img=crop_img, labeled_mask=labeled_mask, n_labels=num, label=\"seed\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "67f384a6",
+   "id": "9cae7ecd",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Inputs:\n",
-    "#   img = image for shape analysis\n",
-    "pcv.plot_image(img=shape_img)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "53e1301d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Inputs:\n",
-    "#   img = image for color analysis\n",
-    "pcv.plot_image(img=img)"
+    "# Analyze color of each seed\n",
+    "        \n",
+    "        # Inputs:\n",
+    "        #   img = rgb image\n",
+    "        #   labeled_mask = Labeled mask of objects (32-bit).\n",
+    "        #   hist_plot_type = 'hsv', or None for no histogram plot\n",
+    "        #   n_labels = Total number expected individual objects (default = 1).\n",
+    "        #   label = Optional label parameter, modifies the variable name of\n",
+    "        #           observations recorded (default = pcv.params.sample_label)\n",
+    "analysis_image = pcv.analyze.color(rgb_img=crop_img, labeled_mask=labeled_mask, n_labels=num, colorspaces=\"hsv\", label=\"seed\")"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "47ea7821",
+   "id": "6ea841fb",
    "metadata": {},
    "source": [
     "## Save results\n",
@@ -484,13 +499,13 @@
     "\n",
     "This example includes image analysis for 'area', 'convex_hull_area', 'solidity', 'perimeter', 'width', 'height', 'longest_path', 'center_of_mass, 'convex_hull_vertices', 'object_in_frame', 'ellipse_center', 'ellipse_major_axis', 'ellipse_minor_axis', 'ellipse_angle', 'ellipse_eccentricity' using anayze_object and color analysis using analyze_color.\n",
     "\n",
-    "Here, results are saved to a CSV file for easy viewing, but when running workflows in parallel, save results as \"json\""
+    "Here, results are saved to JSON file, and this allows for database concatenation while running workflows in parallel."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e077997d",
+   "id": "0d011dbe",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -503,7 +518,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "brilliant-bandwidth",
+   "id": "e67fe3f2",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -511,7 +526,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "pcvadd",
    "language": "python",
    "name": "python3"
   },
