--- a/index-Colab.ipynb
+++ b/index-Colab.ipynb
@@ -98,7 +98,7 @@
     "# once cell is run in jupyter notebooks (recommended)\n",
     "\n",
     "args = WorkflowInputs(\n",
-    "    images=[\"./img/beans_img.jpg\"],\n",
+    "    images=[\"https://raw.githubusercontent.com/danforthcenter/plantcv-tutorial-seeds/main/img/beans_img.jpg\"],\n",
     "    names=\"image1\",\n",
     "    result=\"seed_analysis_results.json\",\n",
     "    outdir=\".\",\n",
@@ -150,7 +150,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "img = pcv.io.open_url(url=\"https://raw.githubusercontent.com/danforthcenter/plantcv-tutorial-seeds/main/img/beans_img.jpg\")"
+    "img = pcv.io.open_url(url=args.image1)"
    ]
   },
   {
@@ -526,7 +526,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "pcvadd",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -540,7 +540,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.10"
+   "version": "3.11.12"
   }
  },
  "nbformat": 4,
